kubernetes/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
  labels:
    io.kompose.service: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs-app
        image: karlitocesi/dockerhub
        ports:
          - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
