kubernetes/api/api-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api
  name: postgres
spec:
  ports:
    - name: "http"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
