kubernetes/api/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
